Add vue/component-name-in-template-casing rule.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,14 @@
             "warn",
             "never"
         ],
+        "vue/component-name-in-template-casing": [
+            "error",
+            "kebab-case",
+            {
+                "registeredComponentsOnly": false,
+                "ignores": []
+            }
+        ],
         "vue/html-indent": [
             "warn",
             4
