--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vitejs/plugin-vue": "^2.3.1",
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^8.7.1",
     "vite": "^2.9.7"
