Update vue/no-multiple-template-root rule to warn.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -114,7 +114,7 @@
             }
         ],
         "vue/multi-word-component-names": "off",
-        "vue/no-multiple-template-root": "off",
+        "vue/no-multiple-template-root": "warn",
         "vue/no-parsing-error": "off"
     }
 }
