--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^8.7.1",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
     "vite": "^2.9.7"
   }
 }
